[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Stage/SCity/Debris.png" type="Texture" id=1]
[ext_resource path="res://Subrooms/breakable.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Misc/Circle_explosion1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Misc/Circle_explosion5.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Misc/Circle_explosion2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Misc/Circle_explosion9.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Misc/Circle_explosion10.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Misc/Circle_explosion4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Misc/Circle_explosion8.png" type="Texture" id=9]
[ext_resource path="res://Audio/SE/Explosion+5.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/Misc/Circle_explosion6.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Misc/Circle_explosion7.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Misc/Circle_explosion3.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "explode",
"speed": 30.0
}, {
"frames": [  ],
"loop": true,
"name": "nothin",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.0314, 130.206 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.4394, 129.644 )

[node name="debrisbreakable" type="Area2D"]
script = ExtResource( 2 )

[node name="explosion" type="AnimatedSprite" parent="."]
position = Vector2( -5.54143, 97.5402 )
scale = Vector2( 2.9201, 2.82298 )
z_index = 49
frames = SubResource( 3 )
animation = "nothin"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 48.772, 100.908 )
scale = Vector2( 1, 1.3 )
z_index = 18
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( -100.017, -0.111359 )
rotation = 3.14159
scale = Vector2( 1, -1 )
z_index = 18
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.316299, 99.7132 )
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 0.316299, 99.7132 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -0.561234 )
shape = SubResource( 2 )

[node name="sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -5.54143, 97.5402 )
scale = Vector2( 2.9201, 2.82298 )
stream = ExtResource( 10 )

[connection signal="area_entered" from="." to="." method="_on_debrisbreakable_area_entered"]
[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
